test/ui/test/metadata/unterminated-text.stderr
error: unterminated text
 --> ${TEST_FOLDER}/metadata/unterminated-text.metadata:2:12
  |
2 |       where: "the long
 ... ____________^
4 | | }
  | |_^
  |

error: found end of input but expected ‘,’
 --> ${TEST_FOLDER}/metadata/unterminated-text.metadata:4:3
  |
4 | }
  | ><
  |

error: aborting due to 2 previous errors

