test/ui/test/metadata/unterminated-text.metadata
# TEST fail metadata

{
    where: "the long
            text starts...
}
